trunk/Archive2/bc/05d5b0d3945c07/output
main.cpp:1:15: error: parameter name omitted
void foo(int *[10]) {}
              ^
main.cpp:5:9: warning: incompatible pointer types passing 'int [10][10]' to parameter of type 'int **' [-Wincompatible-pointer-types]
    foo(arr);
        ^~~
main.cpp:1:15: note: passing argument to parameter here
void foo(int *[10]) {}
              ^
main.cpp:6:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
2 warnings and 1 error generated.
